# spaceman

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  spaceman.desktop
.github/workflows/: pre.sh  release.yml
assets/macos/: Info.plist
src/: actions.rs  bytes_display.rs  config.rs  filetree.rs  gui.rs  main.rs  mounts.rs  node_color.rs  scan.rs  squarify.rs  types.rs  utils.rs
src/gui/: progressbar.rs  squarify.rs
src/gui/treemap_widget/: imp.rs  mod.rs
src/gui/treemap_widget/imp/: node_color.rs
src/ui/: context_menu.rs  mod.rs
