[package]
name = "spacetrooper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk4-rs.git", version = "0.6", package = "gtk4", features = ["v4_8"] }
jwalk = "0.5"
once_cell = "1.17.1"
