[package]
name = "spaceman"
version = "0.2.0"
edition = "2024"

[dependencies]
get_sys_info = "0.1.21"
jwalk = "0.8"
once_cell = "1.17.1"
rfd = { version = "0.14" }
iced = { git = "https://github.com/iced-rs/iced.git", rev = "5c21f73a9942cdeb80bb15284b119da4b4f9a764", features = ["canvas", "smol"] }

[profile.release]
codegen-units = 1
#lto = true
#strip = true
